[package]
name = "cart"
version = "0.1.0"
edition = "2021"
build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }

[features]
use-elias-gamma = []

[profile.release]
opt-level = "z"
lto = true
debug = false
strip = true

[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3

[build-dependencies]
image = "0.24.1"
rayon = "1.5.2"
